# adaf-dashboard-demo

./: .commitlintrc.json  .dockerignore  .gitattributes  .gitignore  ACTUALIZACION_DOCS_POST_AUDITORIA.md  ADAF_COMPENDIO_MAESTRO_v1_5_DOMINIO_TOTAL_2025-10-08.txt  ADAF_COMPENDIO_MAESTRO_v2_0.md  ANALISIS_FALLOS_TESTS.md  ANALISIS_TAREAS_PENDIENTES.md  ARCHITECTURE.md  AUDITORIA_COMPLETA_RESULTADOS.md  AUDITORIA_CONTEXTO.md  CI_INTEGRATION_SETUP.md  DOCUMENTACION_COMPLETA_SHADOW_V1_1.md  Dockerfile.dev  Dockerfile.prod  GIT_BACKUP_LOG.md  GIT_CLEANUP_EXECUTIVE_SUMMARY.md  GIT_CLEANUP_GUIDE.md  GIT_COMMIT_SUMMARY.md  GIT_FORTUNE500_AUDIT.md  GIT_FORTUNE500_IMPLEMENTATION.md  GIT_WORKFLOW_FIX_MANUAL.md  LEEME_GIT_CLEANUP.md  MEJORA_CONTINUA.md  MEMORIA_AVANCES_OCT_2025.md  MEMORIA_GITHUB_COPILOT.md  NAVIGATION.md  ONBOARDING_FORTUNE500.md  ORACLE_CORE_CHECKLIST.md  ORACLE_CORE_COMPLETED.md  ORACLE_CORE_V1_EXECUTIVE_SUMMARY.md  PENDIENTES_FORTUNE500.md  QUICK_REFERENCE_PENDIENTES.md  README.md  README_BACKUP_20251009_191503.md  README_ORACLE_CORE.md  REPORTE_TESTS.md  ROADMAP_FORTUNE500_COMPLETO.md  ROADMAP_OKRS_2025_2026.md  (+38 more)
.github/: CODEOWNERS  ISSUE_VOX_POPULI_V1_1.md  WORKFLOW_MANUAL_SETUP.md  copilot-instructions.md  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
.next-dev/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  trace  (+3 more)
lav-adaf/apps/alpha-factory/: pyproject.toml
lav-adaf/apps/alpha-factory/alpha_factory/: main.py
(+1435 files in other folders)
